test/testdata/functions/anonymous/invalid_property_assignment_error.lox
fun() {}.y = 1; // error: property assignment is not valid for 'function' object
